--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Shared/NavMenuPartial.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Shared/NavMenuPartial.cshtml
@@ -1,49 +1,62 @@
 ﻿<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <a class="navbar-brand" href="#"><img src="/Images/PetWorldLogo.png" style="width: 160px;" alt="aqui"></a>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Página Inicial</a>
-            </li>
-            <li class="nav-item ">
-                <a class="nav-link active" href="#">Produtos</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled active">Meus Agendamentos</a>
-            </li>            
-            <li class="nav-item">
-                <a class="nav-link disabled active">Serviços</a>
-            </li>            
-            <li class="nav-item">
-                <a class="nav-link disabled active">Carrinho</a>
-            </li>
-        </ul>
-        @if (!User.Identity.IsAuthenticated)
-        {
+    <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" href="#">
+            <img src="/Images/PetWorldLogo.png" style="width: 160px; margin-bottom: 10px" alt="aqui">
+        </a>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-but">
-                    <a class="btn btn-outline-light shadow-sm text-decoration-none text-light" asp-controller="Auth" asp-action="Register">Registrar-se</a>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Página Inicial</a>
                 </li>
-                <li class="nav-but">
-                    <a class="btn btn-outline-light shadow-sm text-decoration-none text-light" asp-controller="Auth" asp-action="Login">Entrar</a>
+                <li class="nav-item ">
+                    <a class="nav-link active" href="#">Produtos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Serviços</a>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link active" href="#">Produtos</a>
                 </li>
             </ul>
-        }
-        else
-        {
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                   <li class="nav-item text-light fw-normal">
-                      <p>Olá, @User.Identity.Name</p>
-                   </li>
-                <li class="nav-user">
-                    <img src="/Images/UserSvg.svg" alt="User" style="width: 35px">
-                </li>
-            </ul>
-        }
+            @if (User.Identity != null && !User.Identity.IsAuthenticated)
+            {
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-but">
+                        <a class="btn btn-outline-light shadow text-decoration-none text-light" asp-controller="Auth" asp-action="Register">Registrar-se</a>
+                    </li>
+                    <li class="nav-but">
+                        <a class="btn btn-outline-light shadow text-decoration-none text-light" asp-controller="Auth" asp-action="Login">Entrar</a>
+                    </li>
+                </ul>
+            }
+            else
+            {
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item text-light" style="margin-top: 14px; padding-right: 7px">
+                        <p style="font-weight: 400">Olá, @User.Identity.Name</p>
+                    </li>
+                    <li style="margin-top: 10px; padding-right: 10px">
+                        <div class="d-flex">
+                            <div class="dropdown me-1">
+                                <a class="dropdown-toggle text-decoration-none text-white" data-bs-toggle="dropdown" aria-expanded="false" data-bs-offset="10,20" href="#">
+                                    <img src="/Images/UserSvg.svg" alt="User" style="width: 35px;">
+                                    
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="#">Minha conta</a></li>
+                                    <li><a asp-controller="Auth" asp-action="Logout" class="dropdown-item">Sair</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </li>
+                    <li style="margin-top: 12px; padding-right: 20px" >
+                        <a href=""><img src="/Images/CartSvg.svg" alt="" style="width: 35px;"></a>
+                    </li>
+                </ul>
+            }
+        </div>
     </div>
-  </div>
 </nav>
