feat: Implementação do Supplier Repository, ImageService, CreateViewModel & ProductController

--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Auth/Register.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Auth/Register.cshtml
@@ -1,5 +1,5 @@
 ﻿@using PetWorldOficial.Domain.Enums
-@model UserRegisterDTO
+@model PetWorldOficial.Application.DTOs.User.Input.UserRegisterDTO
 
 @{
     Layout = "_LayoutRegister";
