--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/_ViewImports.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using PetworldOficial.MVC
 @using PetworldOficial.MVC.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using PetWorldOficial.Application.DTOs.Input
+@using PetWorldOficial.Domain.Entities
+@using PetworldOficial.MVC.ViewModels.Product
