feat: Adicionado AutoMapper & implementado classes ProductToProductRegisterDTO e ProductUpdateDTOToProduct que são para mapeamentos do produto

--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Auth/Register.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Auth/Register.cshtml
@@ -1,5 +1,5 @@
 ﻿@using PetWorldOficial.Domain.Enums
-@model PetWorldOficial.Application.DTOs.User.Input.UserRegisterDTO
+@model UserRegisterDTO
 
 @{
     Layout = "_LayoutRegister";
