--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Update.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Update.cshtml
@@ -1,18 +1,63 @@
-﻿@* @model TModel *@
-@* *@
-@* @{ *@
-@*     Layout = null; *@
-@* } *@
-@* *@
-@* <!DOCTYPE html> *@
-@* *@
-@* <html> *@
-@* <head> *@
-@*     <title>title</title> *@
-@* </head> *@
-@* <body> *@
-@* <div> *@
-@*        *@
-@* </div> *@
-@* </body> *@
-@* </html> *@
+﻿@model UpdateProductDTO
+
+@{
+    Layout = "_LayoutRegister";
+}
+
+<div class="container-fluid text-black py-3">
+    <br>
+    <h2 class="display-6 text-center fw">Dados do Produto</h2>
+    <br>
+</div>
+<div class="d-flex justify-content-center align-items-center">
+    <img style="width: 350px;" src="\Images/@Model.ImageUrl" alt="Imagem do Produto">
+</div>
+<div class="container">
+    <form class="row g-3 d-flex justify-content-center align-items-center" enctype="multipart/form-data" asp-controller="Product" asp-action="Update" method="post">
+            
+            
+        <div class="col-md-8">
+            <label asp-for="@Model.Id" class="form-label">Id</label>
+            <input asp-for="@Model.Id" type="text" class="form-control shadow-none" placeholder="Id" readonly>
+        </div>
+
+        <div class="col-md-8">
+            <label asp-for="@Model.Name" class="form-label">Nome<span style="color: red;">*</span></label>
+            <input asp-for="@Model.Name" type="text" class="form-control shadow-none" placeholder="Nome">
+        </div>
+
+        <div class="col-md-8">
+            <label asp-for="@Model.Description" class="form-label">Descrição<span style="color: red;">*</span></label>
+            <input asp-for="@Model.Description" type="text" class="form-control shadow-none" placeholder="Descrição">
+        </div>
+
+        <div class="col-md-8">
+            <label asp-for="@Model!.Price" class="form-label">Preço<span style="color: red;">*</span></label>
+            <input asp-for="@Model!.Price" type="text" class="form-control shadow-none" placeholder="Preço">
+        </div>
+            
+        <div class="col-md-8">
+            <label asp-for="@Model.SupplierId" class="form-label">Fornecedor<span style="color: red;">*</span></label>
+            <select asp-for="@Model.SupplierId" class="form-select shadow-none">
+                <option value="" selected disabled>Selecione um fornecedor</option>
+                @foreach (var supplier in Model.Suppliers!)
+                {
+                    <option value="@supplier.Id">@supplier.Company</option>
+                }
+            </select>
+        </div>
+
+        <div class="col-md-8">
+            <label class="form-label">Imagem<span style="color: red;">*</span></label>
+            <input type="file" class="form-control shadow-none" name="file" placeholder="Escolha uma imagem">
+        </div>
+        <div class="d-grid gap-2 col-4 mx-auto col-md-5">
+            <br>
+            <button class="btn btn-dark btn-lg" type="submit">Alterar</button>
+        </div>
+    </form>
+        
+    <footer>
+
+    </footer>
+</div>
