--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/_ViewImports.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using PetworldOficial.MVC.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using PetWorldOficial.Domain.Entities
-@using PetworldOficial.MVC.ViewModels.Product
+@using PetWorldOficial.Application.DTOs.User.Input
+@using PetWorldOficial.Application.DTOs.Product
