--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/Create.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/Create.cshtml
@@ -1,10 +1,9 @@
-﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
-@model RegisterProductDTO
+﻿@model Service
 
 @{
     Layout = "_LayoutRegister";
 }
-    
+
 <div class="container-fluid text-black py-3">
     <br>
     <h2 class="display-6 text-center fw">Dados do Produto</h2>
@@ -16,30 +15,14 @@
             
         <div class="col-md-8">
             <label asp-for="@Model.Name" class="form-label">Nome<span style="color: red;">*</span></label>
-            <input asp-for="@Model.Name" type="text" class="form-control shadow-none" placeholder="Nome">
-        </div>
-
-        <div class="col-md-8">
-            <label asp-for="@Model.Description" class="form-label">Descrição<span style="color: red;">*</span></label>
-            <input asp-for="@Model.Description" type="text" class="form-control shadow-none" placeholder="Descrição">
+            <input asp-for="@Model.Name" type="text" class="form-control shadow-none" placeholder="Digite o nome">
         </div>
 
         <div class="col-md-8">
             <label asp-for="@Model.Price" class="form-label">Preço<span style="color: red;">*</span></label>
-            <input asp-for="@Model.Price" type="text" class="form-control shadow-none" placeholder="Preço">
+            <input asp-for="@Model.Price" type="text" class="form-control shadow-none" placeholder="Digite o preço">
         </div>
-        
-        <div class="col-md-8">
-            <label asp-for="@Model.SupplierId" class="form-label">Fornecedor<span style="color: red;">*</span></label>
-            <select asp-for="@Model.SupplierId" class="form-select shadow-none">
-                <option value="" selected disabled>Selecione um fornecedor</option>
-                @foreach (var supplier in Model.Suppliers)
-                {
-                    <option value="@supplier!.Id">@supplier.Company</option>
-                }
-            </select>
-        </div>
-            
+
         <div class="col-md-8">
             <label class="form-label">Imagem<span style="color: red;">*</span></label>
             <input type="file" class="form-control shadow-none" name="file" placeholder="Escolha uma imagem">
