feat: Implementado método Create na ServiceController

--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/Create.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/Create.cshtml
@@ -1,12 +1,13 @@
-﻿@model Service
+﻿@model CreateServiceDTO
 
 @{
     Layout = "_LayoutRegister";
+    ViewData["Title"] = "Criar Serviço"; 
 }
 
 <div class="container-fluid text-black py-3">
     <br>
-    <h2 class="display-6 text-center fw">Dados do Produto</h2>
+    <h2 class="display-6 text-center fw">Dados do Serviço</h2>
     <br>
 </div>
 
