--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/_ViewImports.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/_ViewImports.cshtml
@@ -4,3 +4,4 @@
 @using PetWorldOficial.Domain.Entities
 @using PetWorldOficial.Application.DTOs.User.Input
 @using PetWorldOficial.Application.DTOs.Product
+@using PetWorldOficial.Application.DTOs.Service
