feat: criado o ProductService

--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/User/Index.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/User/Index.cshtml
@@ -1,16 +1,16 @@
-﻿@{
-    Layout = null;
-}
-
-<!DOCTYPE html>
-
-<html>
-<head>
-    <title></title>
-</head>
-<body>
-<div>
-    
-</div>
-</body>
-</html>
+﻿@* $1$ @{ #1# *@
+@* $1$     Layout = null; #1# *@
+@* $1$ } #1# *@
+@* $1$ #1# *@
+@* $1$ <!DOCTYPE html> #1# *@
+@* $1$ #1# *@
+@* $1$ <html> #1# *@
+@* $1$ <head> #1# *@
+@* $1$     <title></title> #1# *@
+@* $1$ </head> #1# *@
+@* $1$ <body> #1# *@
+@* $1$ <div> #1# *@
+@* $1$      #1# *@
+@* $1$ </div> #1# *@
+@* $1$ </body> #1# *@
+@* </html> *@
