--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/_ViewImports.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/_ViewImports.cshtml
@@ -5,3 +5,4 @@
 @using PetWorldOficial.Application.DTOs.User.Input
 @using PetWorldOficial.Application.DTOs.Product
 @using PetWorldOficial.Application.DTOs.Service
+@using PetWorldOficial.Application.DTOs.Product.Output
