refactor: métodos alterados os métodos GetAll, GetById e Create da ServiceController

--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/GetAll.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/GetAll.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Service>
+﻿@model IEnumerable<PetWorldOficial.Application.DTOs.Service.Output.OutputServiceDTO>
 
 @{
     Layout = null;
