--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Delete.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Delete.cshtml
@@ -11,39 +11,39 @@
 </div>
 
 <div class="d-flex justify-content-center align-items-center">
-    <img style="width: 350px;" src="\Images/@Model.Product.Image" alt="AQUI">
+    <img style="width: 350px;" src="\Images/@Model.Image" alt="AQUI">
 </div>
 
 <div class="container">
     <br>
-    <form class="row g-3 d-flex justify-content-center align-items-center" enctype="multipart/form-data" asp-controller="Product" asp-action="Update" method="post">
+    <form class="row g-3 d-flex justify-content-center align-items-center" enctype="multipart/form-data" asp-controller="Product" asp-action="Delete" method="post">
 
 
         <div class="col-md-8">
-            <label asp-for="@Model.Product.Id" class="form-label">Id</label>
-            <input asp-for="@Model.Product.Id" type="text" class="form-control shadow-none" placeholder="Id" readonly>
+            <label asp-for="@Model.Id" class="form-label">Id</label>
+            <input asp-for="@Model.Id" type="text" class="form-control shadow-none" placeholder="Id" readonly>
         </div>
 
         <div class="col-md-8">
-            <label asp-for="@Model.Product.Name" class="form-label">Nome</label>
-            <input asp-for="@Model.Product.Name" type="text" class="form-control shadow-none" placeholder="Nome" readonly>
+            <label asp-for="@Model.Name" class="form-label">Nome</label>
+            <input asp-for="@Model.Name" type="text" class="form-control shadow-none" placeholder="Nome" readonly>
         </div>
 
         <div class="col-md-8">
-            <label asp-for="@Model.Product.Description" class="form-label">Descrição</label>
-            <input asp-for="@Model.Product.Description" type="text" class="form-control shadow-none" placeholder="Descrição" readonly>
+            <label asp-for="@Model.Description" class="form-label">Descrição</label>
+            <input asp-for="@Model.Description" type="text" class="form-control shadow-none" placeholder="Descrição" readonly>
         </div>
         
         <div class="col-md-8">
-            <label asp-for="@Model.Product.Price" class="form-label">Preço</label>
-            <input asp-for="@Model.Product.Price" type="text" class="form-control shadow-none" placeholder="Preço" readonly>
+            <label asp-for="@Model.Price" class="form-label">Preço</label>
+            <input asp-for="@Model.Price" type="text" class="form-control shadow-none" placeholder="Preço" readonly>
         </div>
         
         <div class="col-md-8">
             <label asp-for="@Model.Supplier.Company" class="form-label">Fornecedor</label>
             <input asp-for="@Model.Supplier.Company" type="text" class="form-control shadow-none" placeholder="Descrição" readonly>
         </div>
-
+        
         <div class="d-grid gap-2 col-4 mx-auto col-md-5">
             <br>
             <button class="btn btn-dark btn-lg" type="submit">Deletar</button>
