--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Update.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Update.cshtml
@@ -32,8 +32,8 @@
         </div>
 
         <div class="col-md-8">
-            <label asp-for="@Model!.Price" class="form-label">Preço<span style="color: red;">*</span></label>
-            <input asp-for="@Model!.Price" type="text" class="form-control shadow-none" placeholder="Preço">
+            <label asp-for="@Model.Price" class="form-label">Preço<span style="color: red;">*</span></label>
+            <input asp-for="@Model.Price" type="text" class="form-control shadow-none" placeholder="Preço">
         </div>
             
         <div class="col-md-8">
