feat: ScheduleController criada e método Index implementando

--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/GetAll.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/GetAll.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<PetWorldOficial.Application.DTOs.Service.Output.OutputServiceDTO>
+﻿@model IEnumerable<OutputServiceDTO>
 
 @{
     Layout = null;
