--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/GetById.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/GetById.cshtml
@@ -1,18 +1,18 @@
-﻿@* @model TModel *@
-@* *@
-@* @{ *@
-@*     Layout = null; *@
-@* } *@
-@* *@
-@* <!DOCTYPE html> *@
-@* *@
-@* <html> *@
-@* <head> *@
-@*     <title>title</title> *@
-@* </head> *@
-@* <body> *@
-@* <div> *@
-@*        *@
-@* </div> *@
-@* </body> *@
-@* </html> *@
+﻿@model OutputServiceDTO
+
+@{
+    Layout = null;
+}
+
+<!DOCTYPE html>
+
+<html>
+<head>
+    <title>title</title>
+</head>
+<body>
+<div>
+
+</div>
+</body>
+</html>
