--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/_ViewImports.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/_ViewImports.cshtml
@@ -6,3 +6,4 @@
 @using PetWorldOficial.Application.DTOs.Product
 @using PetWorldOficial.Application.DTOs.Service
 @using PetWorldOficial.Application.DTOs.Product.Output
+@using PetWorldOficial.Application.DTOs.Service.Output
