feat: Implementado método Schedule na ScheduleController para agendar serviços no PetShop

--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Auth/Login.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Auth/Login.cshtml
@@ -13,11 +13,11 @@
         <div class="d-flex justify-content-center align-items-center flex-column">
             <div class="mb-3 col-md-10">
                 <label asp-for="UserName" class="form-label">Nome de Usuário</label>
-                <input asp-for="UserName" type="text" class="form-control" placeholder="UserXpto">
+                <input asp-for="UserName" type="text" class="form-control" placeholder="UserXpto" required>
             </div>
             <div class="mb-3 col-md-10">
                 <label asp-for="Password" class="form-label">Senha</label>
-                <input asp-for="Password" type="password" class="form-control" placeholder="Digite sua senha">
+                <input asp-for="Password" type="password" class="form-control" placeholder="Digite sua senha" required>
             </div>
                 
             <div class="d-grid gap-1 col-md-10">
