--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Update.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Update.cshtml
@@ -1,7 +1,7 @@
-﻿@model UpdateProductDTO
+﻿@model PetworldOficial.MVC.Models.Product.UpdateProductViewModel
 
 @{
-    Layout = "_LayoutRegister";
+    Layout = "_LayoutCRUD";
 }
 
 <div class="container-fluid text-black py-3">
