--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Create.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Create.cshtml
@@ -2,7 +2,7 @@
 @model RegisterProductDTO
 
 @{
-    Layout = "_LayoutRegister";
+    Layout = "_LayoutCRUD";
 }
     
 <div class="container-fluid text-black py-3">
@@ -16,26 +16,26 @@
             
         <div class="col-md-8">
             <label asp-for="@Model.Name" class="form-label">Nome<span style="color: red;">*</span></label>
-            <input asp-for="@Model.Name" type="text" class="form-control shadow-none" placeholder="Nome">
+            <input asp-for="@Model.Name" type="text" class="form-control shadow-none" placeholder="Nome" required>
         </div>
 
         <div class="col-md-8">
             <label asp-for="@Model.Description" class="form-label">Descrição<span style="color: red;">*</span></label>
-            <input asp-for="@Model.Description" type="text" class="form-control shadow-none" placeholder="Descrição">
+            <input asp-for="@Model.Description" type="text" class="form-control shadow-none" placeholder="Descrição" required>
         </div>
 
         <div class="col-md-8">
             <label asp-for="@Model.Price" class="form-label">Preço<span style="color: red;">*</span></label>
-            <input asp-for="@Model.Price" type="text" class="form-control shadow-none" placeholder="Preço">
+            <input asp-for="@Model.Price" type="text" class="form-control shadow-none" placeholder="Preço" required>
         </div>
         
         <div class="col-md-8">
             <label asp-for="@Model.SupplierId" class="form-label">Fornecedor<span style="color: red;">*</span></label>
-            <select asp-for="@Model.SupplierId" class="form-select shadow-none">
+            <select asp-for="@Model.SupplierId" class="form-select shadow-none" required>
                 <option value="" selected disabled>Selecione um fornecedor</option>
                 @foreach (var supplier in Model.Suppliers)
                 {
-                    <option value="@supplier!.Id">@supplier.Company</option>
+                    <option value="@supplier.Id">@supplier.Company</option>
                 }
             </select>
         </div>
