--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Delete.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
 @model DeleteProductDTO
 @{
-    Layout = "_LayoutRegister";
+    Layout = "_LayoutCRUD";
 }
 
 <div class="container-fluid text-black py-3">
