--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Schedule/Index.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Schedule/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Service>
 
 @{
-    Layout = "_LayoutRegister";
+    Layout = "_LayoutCRUD";
 }
 
 <div class="container-fluid text-black py-3">
@@ -20,7 +20,7 @@
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">@service.Name</h5>
                         <div class="d-grid gap-2">
-                            <a class="btn btn-primary" asp-controller="Schedulling" asp-action="Schedule" asp-route-id="@service.Id">Agendar</a>
+                            <a class="btn btn-primary" asp-controller="Schedule" asp-action="Schedule" asp-route-id="@service.Id">Agendar</a>
                         </div>
                     </div>
                 </div>
