--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/Create.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CreateServiceDTO
 
 @{
-    Layout = "_LayoutRegister";
+    Layout = "_LayoutCRUD";
     ViewData["Title"] = "Criar Serviço"; 
 }
 
@@ -16,17 +16,17 @@
             
         <div class="col-md-8">
             <label asp-for="@Model.Name" class="form-label">Nome<span style="color: red;">*</span></label>
-            <input asp-for="@Model.Name" type="text" class="form-control shadow-none" placeholder="Digite o nome">
+            <input asp-for="@Model.Name" type="text" class="form-control shadow-none" placeholder="Digite o nome" required>
         </div>
 
         <div class="col-md-8">
             <label asp-for="@Model.Price" class="form-label">Preço<span style="color: red;">*</span></label>
-            <input asp-for="@Model.Price" type="text" class="form-control shadow-none" placeholder="Digite o preço">
+            <input asp-for="@Model.Price" type="text" class="form-control shadow-none" placeholder="Digite o preço" required>
         </div>
 
         <div class="col-md-8">
             <label class="form-label">Imagem<span style="color: red;">*</span></label>
-            <input type="file" class="form-control shadow-none" name="file" placeholder="Escolha uma imagem">
+            <input type="file" class="form-control shadow-none" name="file" placeholder="Escolha uma imagem" required>
         </div>
         <div class="d-grid gap-2 col-4 mx-auto col-md-5">
             <br>
