feat: criadas páginas de update e delete de serviços

--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Delete.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Delete.cshtml
@@ -1,12 +1,13 @@
 ﻿@model DeleteAnimalViewModel
 
 @{
+    ViewData["Title"] = "Deletar Pet";
     Layout = "_Layout";
 }
 
 <div class="container-fluid text-black py-3">
     <br>
-    <h2 class="display-6 text-center fw">Dados do Pet</h2>
+    <h2 class="display-6 text-center fw"><img src="/Images/DadosDoPet.png" alt=""></h2>
     <br>
 </div>
 
