--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Register.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Register.cshtml
@@ -4,12 +4,12 @@
 
 @{
     Layout = "_Layout";
-    ViewData["Title"] = "Registrar Pet";
+    ViewData["Title"] = "Cadastrar Pet";
 }
 
 <div class="container-fluid text-black py-3">
     <br>
-    <h2 class="display-6 text-center fw">Dados do Pet</h2>
+    <h2 class="display-6 text-center fw"><img src="/Images/DadosDoPet.png" alt=""></h2>
     <br>
 </div>
 
