--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Update.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Update.cshtml
@@ -1,7 +1,8 @@
 ﻿@model PetworldOficial.MVC.Models.Product.UpdateProductViewModel
 
 @{
-    Layout = "_LayoutCRUD";
+    ViewData["Title"] = "Atualizar Produto";
+    Layout = "_Layout";
 }
 
 <div class="container-fluid text-black py-3">
