--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Schedule/Update.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Schedule/Update.cshtml
@@ -2,12 +2,15 @@
 @model PetWorldOficial.Application.ViewModels.Schedule.UpdateScheduleViewModel
 
 @{
+    ViewData["Title"] = "Atualizar Agendamento";
     Layout = "_Layout";
 }
 
 <div class="container-fluid text-black py-3">
     <br>
-    <h2 class="display-6 text-center fw">Dados do Agendamento</h2>
+    <h2 class="display-6 text-center fw">
+        <img src="/Images/DadosDoAgendamento.png" alt="">
+    </h2>
     <br>
 </div>
 
