--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Delete.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Delete.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
 @model DeleteProductDTO
 @{
+    ViewData["Title"] = "Deletar Produto";
     Layout = "_LayoutCRUD";
 }
 
