--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Schedule/Delete.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Schedule/Delete.cshtml
@@ -1,11 +1,14 @@
 ﻿@model DeleteScheduleViewModel
 @{
+    ViewData["Title"] = "Deletar Agendamento";
     Layout = "_Layout";
 }
 
 <div class="container-fluid text-black py-3">
     <br>
-    <h2 class="display-6 text-center fw">Dados do Agendamento</h2>
+    <h2 class="display-6 text-center fw">
+        <img src="/Images/DadosDoAgendamento.png" alt="">
+    </h2>
     <br>
 </div>
 
@@ -30,12 +33,12 @@
             <label asp-for="@Model.Date" class="form-label">Data</label>
             <input asp-for="@Model.Date" type="text" class="form-control shadow-none" placeholder="Descrição" readonly value="@Model.Date?.ToString("dd/MM/yyyy")">
         </div>
-        
+
         <div class="col-md-8">
             <label asp-for="@Model.Time" class="form-label">Horário</label>
             <input asp-for="@Model.Time" type="text" class="form-control shadow-none" placeholder="Descrição" readonly>
         </div>
-        
+
         <div class="d-grid gap-2 col-4 mx-auto col-md-5">
             <br>
             <button type="submit" class="btn btn-dark btn-lg">Cancelar</button>
