--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/Index.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/Index.cshtml
@@ -1,12 +1,16 @@
-﻿@model IEnumerable<OutputServiceDTO>
+﻿@using PetWorldOficial.Domain.Enums
+@model IEnumerable<OutputServiceDTO>
 
 @{
+    ViewData["Title"] = "Serviços";
     Layout = "_Layout";
 }
 
 <div class="container-fluid text-black py-3">
     <br>
-    <h2 class="display-6 text-center fw"><img src="/Images/Servicos.png" alt=""></h2>
+    <h2 class="display-6 text-center fw">
+        <img src="/Images/Servicos.png" alt="">
+    </h2>
     <br>
 </div>
 
@@ -26,6 +30,14 @@ else if (TempData["SuccessMessage"] != null)
 }
 
 <div class="container">
+    @if (User.IsInRole(ERole.Admin.ToString()))
+    {
+        <div class="pb-2">
+            <a class="btn btn-dark fw-normal shadow-none" asp-controller="Service" asp-action="Create">
+                <img style="width: 25px" src="/Images/addition.svg" alt="">Novo Serviço
+            </a>
+        </div>
+    }
     <div class="row">
         @foreach (var service in Model)
         {
@@ -34,9 +46,29 @@ else if (TempData["SuccessMessage"] != null)
                     <img src="/Images/@service.ImageUrl" class="ImagemCard card-img-top" alt="..." style="height: 200px; object-fit: cover; width: 100%">
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">@service.Name</h5>
-                        <div class="d-grid gap-2">
-                            <a class="btn btn-primary" asp-controller="Schedule" asp-action="Create" asp-route-id="@service.Id">Agendar</a>
-                        </div>
+                        <p>
+                            <b>Valor:</b> @service.Price.ToString("C")
+                        </p>
+
+                        @if (!User.IsInRole(ERole.Admin.ToString()))
+                        {
+                            <div class="d-grid gap-2">
+                                <a class="btn btn-dark" asp-controller="Schedule" asp-action="Create" asp-route-id="@service.Id">Agendar</a>
+                            </div>
+                        }
+                        else
+                        {
+                            <div class="d-flex justify-content-center align-items-center">
+                                <div style="padding-right: 15px">
+                                    <a style="width: 100px;" asp-controller="Service" asp-action="Update" asp-route-id="@service.Id" class="btn btn-dark me-2 shadow-none">Editar</a>
+                                </div>
+                                <div style="padding-left: 15px">
+                                    <a style="width: 100px" class="btn btn-danger shadow-none" asp-controller="Service" asp-action="Delete" asp-route-id="@service.Id">
+                                        Excluir
+                                    </a>
+                                </div>
+                            </div>
+                        }
                     </div>
                 </div>
             </div>
