refactor: retirada lógica das Controllers e adicionado padrão CQRS

--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Register.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Register.cshtml
@@ -1,6 +1,6 @@
 ﻿@using PetWorldOficial.Domain.Enums
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@model PetWorldOficial.Application.ViewModels.Animal.CreateAnimalViewModel
+@model PetWorldOficial.Application.Commands.Animal.RegisterAnimalCommand
 
 @{
     Layout = "_Layout";
@@ -9,7 +9,9 @@
 
 <div class="container-fluid text-black py-3">
     <br>
-    <h2 class="display-6 text-center fw"><img src="/Images/DadosDoPet.png" alt=""></h2>
+    <h2 class="display-6 text-center fw">
+        <img src="/Images/DadosDoPet.png" alt="">
+    </h2>
     <br>
 </div>
 
