--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Auth/Login.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Auth/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model PetWorldOficial.Application.ViewModels.User.UserLoginViewModel
+﻿@model PetWorldOficial.Application.Commands.User.LoginUserCommand
 
 @{
     Layout = "_LayoutLogin";
