--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Auth/Register.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Auth/Register.cshtml
@@ -1,5 +1,5 @@
 ﻿@using PetWorldOficial.Domain.Enums
-@model PetWorldOficial.Application.ViewModels.User.RegisterUserViewModel
+@model PetWorldOficial.Application.Commands.User.RegisterUserCommand
 
 @{
     ViewData["Title"] = "Registrar Usuário";
