--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Update.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Update.cshtml
@@ -1,4 +1,4 @@
-﻿@model PetworldOficial.MVC.Models.Product.UpdateProductViewModel
+﻿@model PetWorldOficial.Application.ViewModels.Product.UpdateProductViewModel
 
 @{
     ViewData["Title"] = "Atualizar Produto";
