--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/Create.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model PetworldOficial.MVC.ViewModels.Service.CreateServiceViewModel
+﻿@model PetWorldOficial.Application.ViewModels.Service.CreateServiceViewModel
 
 @{
     Layout = "_Layout";
