--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/User/Delete.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/User/Delete.cshtml
@@ -1,4 +1,5 @@
-﻿@model DeleteUserViewModel
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@model PetWorldOficial.Application.Commands.User.DeleteUserCommand
 
 @{
     ViewData["Title"] = "Deletar Usuário";
