--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Delete.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Delete.cshtml
@@ -1,4 +1,5 @@
-﻿@model DeleteAnimalViewModel
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@model PetWorldOficial.Application.Commands.Animal.DeleteAnimalCommand
 
 @{
     ViewData["Title"] = "Deletar Pet";
