--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Update.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Update.cshtml
@@ -1,4 +1,5 @@
-﻿@model UpdateAnimalViewModel
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@model PetWorldOficial.Application.Commands.Animal.UpdateAnimalCommand
 
 @{
     ViewData["Title"] = "Atualizar Pet";
