--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/User/Update.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/User/Update.cshtml
@@ -1,4 +1,5 @@
-﻿@model UpdateUserViewModel
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@model PetWorldOficial.Application.Commands.User.UpdateUserCommand
 
 @{
     ViewData["Title"] = "Alterar Usuário";
