feat: Implementados os Handlers de Create e Update do Service

--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/Delete.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/Delete.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
-@model PetWorldOficial.Application.ViewModels.Service.DeleteServiceViewModel
+@using PetWorldOficial.Application.Commands.Service
+@model DeleteServiceCommand
 
 @{
     ViewData["Title"] = "Deletar Serviço";
