--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/Index.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/Index.cshtml
@@ -1,5 +1,6 @@
-﻿@using PetWorldOficial.Domain.Enums
-@model IEnumerable<OutputServiceDTO>
+﻿@using PetWorldOficial.Application.ViewModels.Service
+@using PetWorldOficial.Domain.Enums
+@model IEnumerable<ServiceDetailsViewModel>
 
 @{
     ViewData["Title"] = "Serviços";
