--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/Update.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/Update.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
-@model PetWorldOficial.Application.ViewModels.Service.UpdateServiceViewModel
+@using PetWorldOficial.Application.Commands.Service
+@model UpdateServiceCommand
 
 @{
     ViewData["Title"] = "Atualizar Serviço";
