--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/Create.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/Create.cshtml
@@ -1,8 +1,8 @@
-﻿@model PetWorldOficial.Application.ViewModels.Service.CreateServiceViewModel
+﻿@model PetWorldOficial.Application.Commands.Service.CreateServiceCommand
 
 @{
     Layout = "_Layout";
-    ViewData["Title"] = "Cadastrar Serviço"; 
+    ViewData["Title"] = "Cadastrar Serviço";
 }
 
 <div class="container-fluid text-black py-3">
@@ -20,7 +20,7 @@
         </div>
     </div>
 }
-else if(TempData["SuccessMessage"] != null)
+else if (TempData["SuccessMessage"] != null)
 {
     <div class="d-flex justify-content-center align-items-center">
         <div class="col-md-8 alert alert-success" role="alert">
@@ -33,7 +33,7 @@ else if(TempData["SuccessMessage"] != null)
 
 <div class="container">
     <form class="row g-3 d-flex justify-content-center align-items-center" enctype="multipart/form-data" asp-controller="Service" asp-action="Create" method="post">
-            
+
         <div class="col-md-8">
             <label asp-for="@Model.Name" class="form-label">Nome<span style="color: red;">*</span></label>
             <input asp-for="@Model.Name" type="text" class="form-control shadow-none" placeholder="Digite o nome">
@@ -56,8 +56,7 @@ else if(TempData["SuccessMessage"] != null)
             <button class="btn btn-dark btn-lg" type="submit">Cadastrar</button>
         </div>
     </form>
-        
-    <footer>
 
+    <footer>
     </footer>
 </div>
