--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/GetById.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/GetById.cshtml
@@ -1,4 +1,5 @@
-﻿@model OutputServiceDTO
+﻿@using PetWorldOficial.Application.ViewModels.Service
+@model ServiceDetailsViewModel
 
 @{
     Layout = null;
