fix: consertada tela de Login

--- a/PetworldOficial.Presentation/PetworldOficial.MVC/wwwroot/css/login.css
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/wwwroot/css/login.css
@@ -6,6 +6,7 @@
 body{
     color: white;
     font-weight: 500;
+    overflow-y: hidden;
 }
 .container{
     background-image: url("../Images/BackgroundLogin.jpg");
