--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Auth/Register.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Auth/Register.cshtml
@@ -13,16 +13,20 @@
 </div>
 @if (TempData["ErrorMessage"] != null)
 {
-    <div class="alert alert-danger col-md-10" role="alert">
-        @TempData["ErrorMessage"]
-        <button style="position: absolute; top: 0.7rem; right: 0; padding: 0.5rem 1rem;" type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    <div class="d-flex justify-content-center align-items-center">
+        <div class="alert alert-danger col-md-10" role="alert">
+            @TempData["ErrorMessage"]
+            <button style="position: absolute; top: 0.7rem; right: 0; padding: 0.5rem 1rem;" type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
     </div>
 }
 else if (TempData["SuccessMessage"] != null)
 {
-    <div class="alert alert-success col-md-10" role="alert">
-        @TempData["SuccessMessage"]
-        <button style="position: absolute; top: 0.7rem; right: 0; padding: 0.5rem 1rem;" type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    <div class="d-flex justify-content-center align-items-center">
+        <div class="alert alert-success col-md-10" role="alert">
+            @TempData["SuccessMessage"]
+            <button style="position: absolute; top: 0.7rem; right: 0; padding: 0.5rem 1rem;" type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
     </div>
 }
 
@@ -122,7 +126,7 @@ else if (TempData["SuccessMessage"] != null)
     </div>
 
     <div class="col-md-5">
-        <label asp-for="Neighborhood"class="form-label">Bairro <span style="color: red;">*</span></label>
+        <label asp-for="Neighborhood" class="form-label">Bairro <span style="color: red;">*</span></label>
         <input asp-for="Neighborhood" type="text" class="form-control shadow-none">
         <span asp-validation-for="Neighborhood" class="text-danger"></span>
     </div>
